# objective06

./: .gitignore  .pre-commit-config.yaml  BUILDING.md  CONSTITUTION.md  Makefile  README.md  SELF_ANALYSIS_IMPROVEMENT_PLAN.md  SELF_CRITICAL_TASKS.md  SELF_IMPLEMENTATION_PLAN.md  SELF_IMPLEMENTATION_PRIORITY.md  SELF_IMPROVEMENT_SUMMARY.md  SELF_QUICK_GUIDE.md  TODO.md  pyproject.toml  spec.md
architecture/: action_engine.md  digital_twin.md  evaluation.md  extraction.md  identity_graph.md  memory.md  observer.md  orchestration.md  persona_engine.md  security.md  storage.md  synthesis_engine.md
decisions/: ADR-0001-local-first.md  ADR-0002-graph-substrate.md  ADR-0003-embedding-model.md
docs/: CRITIQUE_AND_UPDATES.md  glossary.md  style_guide.md
evaluations/: build_identity_snapshot.md  component_library.md  detect_goal.md  digital_twin_interface.md  discover_project.md  extract_belief.md  knowledge_synthesis.md  memory_retrieval.md  predict_next_task.md  update_persona.md
examples/: identity_evolution.md
interfaces/: filesystem.md  local_models.md  memory_api.md  storage.md
prompts/: extraction_belief.md
roadmap/: phase_01_foundation.md  phase_02_observation.md  phase_03_extraction.md  phase_04_memory.md  phase_05_identity.md  phase_06_persona.md  phase_07_digital_twin.md  phase_08_action_engine.md  phase_09_continuous_synthesis.md  phase_10_autonomy.md
schemas/: action_request.md  action_result.md  belief.md  daily_summary.md  goal.md  identity_node.md  identity_snapshot.md  interest.md  knowledge_object.md  memory_snapshot.md  observation_event.md  (+4 more)
(+191 files in other folders)
